Published multiple files

--- a/src/site/notes/Кейс Геофилософия/1 Лекции/Лекция 06 - Феноменология Земли (Гуссерль, Мерло-Понти, Деррида).md
+++ b/src/site/notes/Кейс Геофилософия/1 Лекции/Лекция 06 - Феноменология Земли (Гуссерль, Мерло-Понти, Деррида).md
@@ -5,14 +5,14 @@
 
 # Лекция 6: Феноменология Земли (Гуссерль, Мерло-Понти, Деррида)
 
-**Основные понятия:** [[Геофеноменология\|Геофеноменология]], [[Антикоперниканский поворот\|Антикоперниканский поворот]], [[Плоть мира\|Плоть мира]], [[Трансцендентальная геология\|Трансцендентальная геология]], [[Оседание опыта\|Оседание опыта]]
+**Основные понятия:** [[Геофеноменология\|Геофеноменология]], [[Кейс Геофилософия/2 Темы/Антикоперниканский поворот\|Антикоперниканский поворот]], [[Плоть мира\|Плоть мира]], [[Трансцендентальная геология\|Трансцендентальная геология]], [[Оседание опыта\|Оседание опыта]]
 **Ключевые авторы:** [[Гуссерль, Эдмунд\|Гуссерль, Эдмунд]], [[Мерло-Понти, Морис\|Мерло-Понти, Морис]], [[Деррида, Жак\|Деррида, Жак]]
 
 ## Тезисы
 
 ### 1. [[Гуссерль, Эдмунд\|Гуссерль, Эдмунд]]: Земля как первый ковчег
 - На фоне "кризиса европейских наук" Гуссерль ищет новые основания для опыта.
-- Он совершает **[[Антикоперниканский поворот\|Антикоперниканский поворот]]**: возвращается к [[Земля\|Земле]] как к основе.
+- Он совершает **[[Кейс Геофилософия/2 Темы/Антикоперниканский поворот\|Антикоперниканский поворот]]**: возвращается к [[Земля\|Земле]] как к основе.
 - **[[Земля как первый ковчег\|Земля как первый ковчег]]**:
     - Это **"прародина"** и **"сверх-тело"**.
     - Она обеспечивает **покой**, на фоне которого возможно движение.
