--- a/src/site/notes/Кейс Геофилософия/1 Лекции/Лекции Оглавление.md
+++ b/src/site/notes/Кейс Геофилософия/1 Лекции/Лекции Оглавление.md
@@ -7,12 +7,12 @@
 Здесь собраны конспекты всех лекций курса. Каждая заметка содержит ключевые тезисы, упомянутых авторов и понятия.
 
 1.  [[Кейс Геофилософия/1 Лекции/Лекция 01 - Введение. Когда закончилась Земля\|Лекция 01 - Введение. Когда закончилась Земля]]
-2.  [[Кейс Геофилософия/1 Лекции/Лекция 02 - Земля как концепт (Делёз и Гваттари)\|Лекция 02 - Земля как концепт (Делёз и Гваттари)]]
-3.  [[Кейс Геофилософия/1 Лекции/Лекция 03 - Земля без оснований (Шеллинг и Вудард)\|Лекция 03 - Земля без оснований (Шеллинг и Вудард)]]
-4.  [[Кейс Геофилософия/1 Лекции/Лекция 04 - Политики заботы (Мортон и Харауэй)\|Лекция 04 - Политики заботы (Мортон и Харауэй)]]
-5.  [[Кейс Геофилософия/1 Лекции/Лекция 05 - Метафизика ландшафта (Подорога)\|Лекция 05 - Метафизика ландшафта (Подорога)]]
-6.  [[Кейс Геофилософия/1 Лекции/Лекция 06 - Феноменология Земли (Гуссерль, Мерло-Понти, Деррида)\|Лекция 06 - Феноменология Земли (Гуссерль, Мерло-Понти, Деррида)]]
-7.  [[Кейс Геофилософия/1 Лекции/Лекция 07 - Теория Геи (Лавлок и Латур)\|Лекция 07 - Теория Геи (Лавлок и Латур)]]
-8.  [[Кейс Геофилософия/1 Лекции/Лекция 08 - Политическая Земля (Шмитт и Латур)\|Лекция 08 - Политическая Земля (Шмитт и Латур)]]
-9.  [[Кейс Геофилософия/1 Лекции/Лекция 09 - Темная Земля (Агамбен и философия нефти)\|Лекция 09 - Темная Земля (Агамбен и философия нефти)]]
-10. [[Кейс Геофилософия/1 Лекции/Лекция 10 - Карты и картография (Берг и Латур)\|Лекция 10 - Карты и картография (Берг и Латур)]]
+2.  [[Кейс Геофилософия/1 Лекции/Лекция 02 - Земля как концепт\|Лекция 02 - Земля как концепт]]
+3.  [[Кейс Геофилософия/1 Лекции/Лекция 03 - Земля без оснований\|Лекция 03 - Земля без оснований]]
+4.  [[Кейс Геофилософия/1 Лекции/Лекция 04 - Политики заботы\|Лекция 04 - Политики заботы]]
+5.  [[Кейс Геофилософия/1 Лекции/Лекция 05 - Метафизика ландшафта\|Лекция 05 - Метафизика ландшафта]]
+6.  [[Кейс Геофилософия/1 Лекции/Лекция 06 - Феноменология Земли\|Лекция 06 - Феноменология Земли]]
+7.  [[Кейс Геофилософия/1 Лекции/Лекция 07 - Теория Геи\|Лекция 07 - Теория Геи]]
+8.  [[Кейс Геофилософия/1 Лекции/Лекция 08 - Политическая Земля\|Лекция 08 - Политическая Земля]]
+9.  [[Кейс Геофилософия/1 Лекции/Лекция 09 - Темная Земля\|Лекция 09 - Темная Земля]]
+10. [[Кейс Геофилософия/1 Лекции/Лекция 10 - Карты и картография\|Лекция 10 - Карты и картография]]
