--- a/src/site/notes/Кейс Геофилософия/2 Темы/Антикоперниканский поворот.md
+++ b/src/site/notes/Кейс Геофилософия/2 Темы/Антикоперниканский поворот.md
@@ -1,3 +1,3 @@
 ---
-{"dg-publish":true,"dg-path":"Кейс Геофилософия/Темы","permalink":"/kejs-geofilosofiya/temy/"}
+{"dg-publish":true,"dg-path":"Кейс Геофилософия/Темы/Антикоперниканский поворот","permalink":"/kejs-geofilosofiya/temy/antikopernikanskij-povorot/"}
 ---
