Published multiple files

--- a/src/site/notes/Кейс Геофилософия/1 Лекции/Лекция 01 - Введение. Когда закончилась Земля.md
+++ b/src/site/notes/Кейс Геофилософия/1 Лекции/Лекция 01 - Введение. Когда закончилась Земля.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-path":"Кейс Геофилософия/Лекция 1 – Когда закончилась Земля","permalink":"/kejs-geofilosofiya/lekcziya-1-kogda-zakonchilas-zemlya/"}
+{"dg-publish":true,"dg-path":"Кейс Геофилософия/Лекции/Лекция 1 – Когда закончилась Земля","permalink":"/kejs-geofilosofiya/lekczii/lekcziya-1-kogda-zakonchilas-zemlya/"}
 ---
 
 
