--- a/src/site/notes/Кейс Геофилософия/1 Лекции/Лекция 02 - Земля как концепт.md
+++ b/src/site/notes/Кейс Геофилософия/1 Лекции/Лекция 02 - Земля как концепт.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-path":"Кейс Геофилософия/Лекция 2 – Земля как концепт","permalink":"/kejs-geofilosofiya/lekcziya-2-zemlya-kak-konczept/"}
+{"dg-publish":true,"dg-path":"Кейс Геофилософия/Лекции/Лекция 2 – Земля как концепт","permalink":"/kejs-geofilosofiya/lekczii/lekcziya-2-zemlya-kak-konczept/"}
 ---
 
 # Лекция 2: Земля как концепт. Делёз и Гваттари
