--- a/src/site/notes/Кейс Геофилософия/1 Лекции/Лекция 03 - Земля без оснований.md
+++ b/src/site/notes/Кейс Геофилософия/1 Лекции/Лекция 03 - Земля без оснований.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-path":"Кейс Геофилософия/Лекция 3 – Земля без оснований","permalink":"/kejs-geofilosofiya/lekcziya-3-zemlya-bez-osnovanij/"}
+{"dg-publish":true,"dg-path":"Кейс Геофилософия/1 Лекции/Лекция 3 – Земля без оснований","permalink":"/kejs-geofilosofiya/1-lekczii/lekcziya-3-zemlya-bez-osnovanij/"}
 ---
 
 # Лекция 3: Земля без оснований. Как не провалиться в бездну?
