--- a/src/site/notes/Кейс Геофилософия/1 Лекции/Лекция 04 - Политики заботы.md
+++ b/src/site/notes/Кейс Геофилософия/1 Лекции/Лекция 04 - Политики заботы.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-path":"Кейс Геофилософия/Лекция 4 – Политики заботы","permalink":"/kejs-geofilosofiya/lekcziya-4-politiki-zaboty/"}
+{"dg-publish":true,"dg-path":"Кейс Геофилософия/1 Лекции/Лекция 4 – Политики заботы","permalink":"/kejs-geofilosofiya/1-lekczii/lekcziya-4-politiki-zaboty/"}
 ---
 
 # Лекция 4: Политики заботы. Поврежденная земля, Мортон и Харауэй
