--- a/src/site/notes/Кейс Геофилософия/1 Лекции/Лекция 05 - Метафизика ландшафта.md
+++ b/src/site/notes/Кейс Геофилософия/1 Лекции/Лекция 05 - Метафизика ландшафта.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-path":"Кейс Геофилософия/Лекция 5 – Метафизика ландшафта","permalink":"/kejs-geofilosofiya/lekcziya-5-metafizika-landshafta/"}
+{"dg-publish":true,"dg-path":"Кейс Геофилософия/1 Лекции/Лекция 5 – Метафизика ландшафта","permalink":"/kejs-geofilosofiya/1-lekczii/lekcziya-5-metafizika-landshafta/"}
 ---
 
 # Лекция 5: Метафизика ландшафта (Валерий Подорога)
