--- a/src/site/notes/Кейс Геофилософия/1 Лекции/Лекция 06 - Феноменология Земли.md
+++ b/src/site/notes/Кейс Геофилософия/1 Лекции/Лекция 06 - Феноменология Земли.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-path":"Кейс Геофилософия/Лекция 6 – Феноменология Земли","permalink":"/kejs-geofilosofiya/lekcziya-6-fenomenologiya-zemli/"}
+{"dg-publish":true,"dg-path":"Кейс Геофилософия/1 Лекции/Лекция 6 – Феноменология Земли","permalink":"/kejs-geofilosofiya/1-lekczii/lekcziya-6-fenomenologiya-zemli/"}
 ---
 
 
