--- a/src/site/notes/Кейс Геофилософия/1 Лекции/Лекция 07 - Теория Геи.md
+++ b/src/site/notes/Кейс Геофилософия/1 Лекции/Лекция 07 - Теория Геи.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-path":"Кейс Геофилософия/Лекция 7 – Теория Геи","permalink":"/kejs-geofilosofiya/lekcziya-7-teoriya-gei/"}
+{"dg-publish":true,"dg-path":"Кейс Геофилософия/1 Лекции/Лекция 7 – Теория Геи","permalink":"/kejs-geofilosofiya/1-lekczii/lekcziya-7-teoriya-gei/"}
 ---
 
 
