--- a/src/site/notes/Кейс Геофилософия/1 Лекции/Лекция 08 - Политическая Земля.md
+++ b/src/site/notes/Кейс Геофилософия/1 Лекции/Лекция 08 - Политическая Земля.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-path":"Кейс Геофилософия/Лекция 8 – Политическая Земля","permalink":"/kejs-geofilosofiya/lekcziya-8-politicheskaya-zemlya/"}
+{"dg-publish":true,"dg-path":"Кейс Геофилософия/1 Лекции/Лекция 8 – Политическая Земля","permalink":"/kejs-geofilosofiya/1-lekczii/lekcziya-8-politicheskaya-zemlya/"}
 ---
 
 # Лекция 8: Политическая Земля. Шмитт и Латур
