--- a/src/site/notes/Кейс Геофилософия/1 Лекции/Лекция 09 - Темная Земля.md
+++ b/src/site/notes/Кейс Геофилософия/1 Лекции/Лекция 09 - Темная Земля.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-path":"Кейс Геофилософия/Лекция 9 – Темная Земля","permalink":"/kejs-geofilosofiya/lekcziya-9-temnaya-zemlya/"}
+{"dg-publish":true,"dg-path":"Кейс Геофилософия/1 Лекции/Лекция 9 – Темная Земля","permalink":"/kejs-geofilosofiya/1-lekczii/lekcziya-9-temnaya-zemlya/"}
 ---
 
 
