--- a/src/site/notes/Кейс Геофилософия/1 Лекции/Лекция 10 - Карты и картография.md
+++ b/src/site/notes/Кейс Геофилософия/1 Лекции/Лекция 10 - Карты и картография.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-path":"Кейс Геофилософия/Лекция 10 – Карты и картография","permalink":"/kejs-geofilosofiya/lekcziya-10-karty-i-kartografiya/"}
+{"dg-publish":true,"dg-path":"Кейс Геофилософия/1 Лекции/Лекция 10 – Карты и картография","permalink":"/kejs-geofilosofiya/1-lekczii/lekcziya-10-karty-i-kartografiya/"}
 ---
 
 # Лекция 10: Карты и картография. Взгляд на Землю
