--- a/src/site/notes/Кейс Геофилософия/1 Лекции/Лекция 01 - Введение. Когда закончилась Земля.md
+++ b/src/site/notes/Кейс Геофилософия/1 Лекции/Лекция 01 - Введение. Когда закончилась Земля.md
@@ -1,11 +1,11 @@
 ---
-{"dg-publish":true,"dg-path":"Кейс Геофилософия/1 Лекции/Лекция 1 – Когда закончилась Земля","permalink":"/kejs-geofilosofiya/1-lekczii/lekcziya-1-kogda-zakonchilas-zemlya/"}
+{"dg-publish":true,"dg-path":"Кейс Геофилософия/1 Лекции/Лекция 1 – Когда закончилась Земля","permalink":"/kejs-geofilosofiya/1-lekczii/lekcziya-1-kogda-zakonchilas-zemlya/","dgShowLocalGraph":true}
 ---
 
 
 # Лекция 1: Введение в геофилософию. Когда закончилась Земля?
 
-**Основные понятия:** [[Геофилософия\|Геофилософия]], [[Смерть больших нарративов\|Смерть больших нарративов]], [[Постгуманизм\|Постгуманизм]], [[Спекулятивный поворот\|Спекулятивный поворот]], [[Критика антропоцентризма\|Критика антропоцентризма]]
+**Основные понятия:** [[Геофилософия\|Геофилософия]], [[Кейс Геофилософия/2 Темы/Смерть больших нарративов\|Смерть больших нарративов]], [[Кейс Геофилософия/2 Темы/Постгуманизм\|Постгуманизм]], [[Кейс Геофилософия/2 Темы/Темные теории\|Темные теории]], [[Кейс Геофилософия/2 Темы/Критика антропоцентризма\|Критика антропоцентризма]]
 **Ключевые авторы:** [[Делёз, Жиль\|Делёз, Жиль]], [[Гваттари, Феликс\|Гваттари, Феликс]], [[Латур, Бруно\|Латур, Бруно]], [[Вудард, Бен\|Вудард, Бен]], [[Барад, Карен\|Барад, Карен]]
 
 ## Тезисы
@@ -19,11 +19,11 @@
 - XX век ознаменовался "смертью" универсальных понятий: смерть Бога ([[Ницше, Фридрих\|Ницше, Фридрих]]), смерть автора, смерть человека ([[Хайдеггер, Мартин\|Фуко]]).
 - [[Латур, Бруно\|Латур, Бруно]] провозглашает смерть Природы (с большой буквы), утверждая, что она была конструктом, противопоставленным Культуре.
 - Аналогично, "закончилась" и [[Земля\|Земля]] как единое, пассивное, универсальное понятие ("матушка-земля").
-- На смену единой Природе приходит **[[мультинатурализм\|мультинатурализм]]** (множество природ), а на смену единой Земле — **[[Множественность (миров, природ, земель)\|Множественность (миров, природ, земель)]]**.
+- На смену единой Природе приходит **[[мультинатурализм\|мультинатурализм]]** (множество природ), а на смену единой Земле — **[[Кейс Геофилософия/2 Темы/Множественность (миров, природ, земель)\|Множественность (миров, природ, земель)]]**.
 
 ### 3. Связь с современной философией
-- **[[Постгуманизм\|Постгуманизм]]**: [[Геофилософия\|Геофилософия]] смещает человека из центра мироздания, преодолевая дуализмы "субъект-объект" и "природа-культура".
-- **[[Спекулятивный поворот\|Спекулятивный поворот]]**: Критика "[[корреляционизм\|корреляционизма]]" открывает возможность мыслить [[Земля\|Землю]] вне нашего восприятия.
+- **[[Кейс Геофилософия/2 Темы/Постгуманизм\|Постгуманизм]]**: [[Геофилософия\|Геофилософия]] смещает человека из центра мироздания, преодолевая дуализмы "субъект-объект" и "природа-культура".
+- **[[Кейс Геофилософия/2 Темы/Темные теории\|Темные теории]]**: Критика "[[корреляционизм\|корреляционизма]]" открывает возможность мыслить [[Земля\|Землю]] вне нашего восприятия.
 
 ### 4. Практическое применение
 - **Быть приземленными**: [[Латур, Бруно\|Латур, Бруно]] вводит понятие "[[Приземленные\|Приземленные]]" — тех, кто осознает свою неразрывную связь с [[Земля\|Землей]].
