--- a/src/site/notes/Кейс Геофилософия/1 Лекции/Лекция 03 - Земля без оснований.md
+++ b/src/site/notes/Кейс Геофилософия/1 Лекции/Лекция 03 - Земля без оснований.md
@@ -1,10 +1,10 @@
 ---
-{"dg-publish":true,"dg-path":"Кейс Геофилософия/1 Лекции/Лекция 3 – Земля без оснований","permalink":"/kejs-geofilosofiya/1-lekczii/lekcziya-3-zemlya-bez-osnovanij/"}
+{"dg-publish":true,"dg-path":"Кейс Геофилософия/1 Лекции/Лекция 3 – Земля без оснований","permalink":"/kejs-geofilosofiya/1-lekczii/lekcziya-3-zemlya-bez-osnovanij/","dgShowLocalGraph":true}
 ---
 
 # Лекция 3: Земля без оснований. Как не провалиться в бездну?
 
-**Основные понятия:** [[Проблема оснований и безосновности\|Проблема оснований и безосновности]], [[Темная геофилософия\|Темная геофилософия]], [[Геологическое как бессознательное\|Геологическое как бессознательное]]
+**Основные понятия:** [[Кейс Геофилософия/2 Темы/Проблема оснований и безосновности\|Проблема оснований и безосновности]], [[Темная геофилософия\|Темная геофилософия]], [[Геологическое как бессознательное\|Геологическое как бессознательное]]
 **Ключевые авторы:** [[Вудард, Бен\|Вудард, Бен]], [[Шеллинг, Фридрих\|Шеллинг, Фридрих]], [[Делёз, Жиль\|Делёз, Жиль]], [[Кант, Иммануил\|Кант, Иммануил]]
 
 ## Тезисы
@@ -13,7 +13,7 @@
 - Существует различие между **[[Основание\|Основание]] (Grund)** и **[[Обоснование\|Обоснование]] (Begründung)**.
 - **[[Основание\|Основание]]** — это мифический, не требующий доказательств исток.
 - **[[Обоснование\|Обоснование]]** — это рациональная, философская попытка доказать, на чем все держится.
-- **Парадокс**: Любое рациональное **[[Обоснование\|Обоснование]]** в конечном счете упирается в **[[Безосновность (Грунд)\|Безосновность (Грунд)]]**.
+- **Парадокс**: Любое рациональное **[[Обоснование\|Обоснование]]** в конечном счете упирается в **[[Кейс Геофилософия/3 Понятия/Безосновность (Грунд)\|Безосновность (Грунд)]]**.
 - **Формула:** Безосновность есть основание обоснованного.
 
 ### 2. [[Шеллинг, Фридрих\|Шеллинг, Фридрих]] и темный исток
