--- a/src/site/notes/Кейс Геофилософия/1 Лекции/Лекция 05 - Метафизика ландшафта.md
+++ b/src/site/notes/Кейс Геофилософия/1 Лекции/Лекция 05 - Метафизика ландшафта.md
@@ -1,15 +1,15 @@
 ---
-{"dg-publish":true,"dg-path":"Кейс Геофилософия/1 Лекции/Лекция 5 – Метафизика ландшафта","permalink":"/kejs-geofilosofiya/1-lekczii/lekcziya-5-metafizika-landshafta/"}
+{"dg-publish":true,"dg-path":"Кейс Геофилософия/1 Лекции/Лекция 5 – Метафизика ландшафта","permalink":"/kejs-geofilosofiya/1-lekczii/lekcziya-5-metafizika-landshafta/","dgShowLocalGraph":true}
 ---
 
 # Лекция 5: Метафизика ландшафта (Валерий Подорога)
 
-**Основные понятия:** [[Метафизика ландшафта\|Метафизика ландшафта]], [[Земля произведений\|Земля произведений]], [[Ландшафт\|Ландшафт]]
+**Основные понятия:** [[Кейс Геофилософия/2 Темы/Метафизика ландшафта\|Метафизика ландшафта]], [[Земля произведений\|Земля произведений]], [[Ландшафт\|Ландшафт]]
 **Ключевые авторы:** [[Подорога, Валерий\|Подорога, Валерий]], [[Кьеркегор, Сёрен\|Кьеркегор, Сёрен]], [[Ницше, Фридрих\|Ницше, Фридрих]], [[Хайдеггер, Мартин\|Хайдеггер, Мартин]]
 
 ## Тезисы
 
-### 1. Что такое [[Метафизика ландшафта\|Метафизика ландшафта]]?
+### 1. Что такое [[Кейс Геофилософия/2 Темы/Метафизика ландшафта\|Метафизика ландшафта]]?
 - Это **"топология философского мышления"**. Проект [[Подорога, Валерий\|Валерия Подороги]] исследует, как пространство, ландшафт и телесная ориентация мыслителя влияют на его философию.
 - **Всякая мысль пространственна**.
 
