--- a/src/site/notes/Кейс Геофилософия/1 Лекции/Лекция 06 - Феноменология Земли.md
+++ b/src/site/notes/Кейс Геофилософия/1 Лекции/Лекция 06 - Феноменология Земли.md
@@ -1,11 +1,11 @@
 ---
-{"dg-publish":true,"dg-path":"Кейс Геофилософия/1 Лекции/Лекция 6 – Феноменология Земли","permalink":"/kejs-geofilosofiya/1-lekczii/lekcziya-6-fenomenologiya-zemli/"}
+{"dg-publish":true,"dg-path":"Кейс Геофилософия/1 Лекции/Лекция 6 – Феноменология Земли","permalink":"/kejs-geofilosofiya/1-lekczii/lekcziya-6-fenomenologiya-zemli/","dgShowLocalGraph":true}
 ---
 
 
 # Лекция 6: Феноменология Земли (Гуссерль, Мерло-Понти, Деррида)
 
-**Основные понятия:** [[Геофеноменология\|Геофеноменология]], [[Кейс Геофилософия/2 Темы/Антикоперниканский поворот\|Антикоперниканский поворот]], [[Плоть мира\|Плоть мира]], [[Трансцендентальная геология\|Трансцендентальная геология]], [[Оседание опыта\|Оседание опыта]]
+**Основные понятия:** [[Кейс Геофилософия/2 Темы/Геофеноменология\|Геофеноменология]], [[Кейс Геофилософия/2 Темы/Антикоперниканский поворот\|Антикоперниканский поворот]], [[Плоть мира\|Плоть мира]], [[Трансцендентальная геология\|Трансцендентальная геология]], [[Оседание опыта\|Оседание опыта]]
 **Ключевые авторы:** [[Гуссерль, Эдмунд\|Гуссерль, Эдмунд]], [[Мерло-Понти, Морис\|Мерло-Понти, Морис]], [[Деррида, Жак\|Деррида, Жак]]
 
 ## Тезисы
