--- a/src/site/notes/Кейс Геофилософия/1 Лекции/Лекция 08 - Политическая Земля.md
+++ b/src/site/notes/Кейс Геофилософия/1 Лекции/Лекция 08 - Политическая Земля.md
@@ -1,15 +1,15 @@
 ---
-{"dg-publish":true,"dg-path":"Кейс Геофилософия/1 Лекции/Лекция 8 – Политическая Земля","permalink":"/kejs-geofilosofiya/1-lekczii/lekcziya-8-politicheskaya-zemlya/"}
+{"dg-publish":true,"dg-path":"Кейс Геофилософия/1 Лекции/Лекция 8 – Политическая Земля","permalink":"/kejs-geofilosofiya/1-lekczii/lekcziya-8-politicheskaya-zemlya/","dgShowLocalGraph":true}
 ---
 
 # Лекция 8: Политическая Земля. Шмитт и Латур
 
-**Основные понятия:** [[Политическая земля\|Политическая земля]], [[Номос земли\|Номос земли]], [[Суверенитет\|Суверенитет]], [[Чрезвычайное положение\|Чрезвычайное положение]], [[Анти-законы\|Анти-законы]]
+**Основные понятия:** [[Кейс Геофилософия/2 Темы/Политическая земля\|Политическая земля]], [[Номос земли\|Номос земли]], [[Суверенитет\|Суверенитет]], [[Чрезвычайное положение\|Чрезвычайное положение]], [[Кейс Геофилософия/3 Понятия/Анти-законы\|Анти-законы]]
 **Ключевые авторы:** [[Шмитт, Карл\|Шмитт, Карл]], [[Латур, Бруно\|Латур, Бруно]], [[Декарт, Рене\|Декарт, Рене]]
 
 ## Тезисы
 
-### 1. Переход к [[Политическая земля\|политической Земле]]
+### 1. Переход к [[Кейс Геофилософия/2 Темы/Политическая земля\|политической Земле]]
 - [[Латур, Бруно\|Латур, Бруно]] описывает [[Земля\|Землю]] ([[Гея\|Гея]]) как новую **политическую сущность**, которая проявляет **[[Суверенитет\|Суверенитет]]**.
 - Возникает вопрос: можно ли заключить с ней **договор или контракт**?
 
@@ -24,5 +24,5 @@
 
 ### 4. Изобретая автономную Землю
 - **[[Земля\|Земля]] как Бог-суверен**: Чтобы помыслить автономию [[Земля\|Земли]], нужно соединить политическую теологию и политическую землю.
-    - **[[Земля\|Земля]] не устанавливает "законов"**, с ней нельзя заключить договор. У нее есть **[[Анти-законы\|Анти-законы]]** — непредсказуемые катастрофы.
+    - **[[Земля\|Земля]] не устанавливает "законов"**, с ней нельзя заключить договор. У нее есть **[[Кейс Геофилософия/3 Понятия/Анти-законы\|Анти-законы]]** — непредсказуемые катастрофы.
     - **[[Земля\|Земля]] сама реализует решение о [[Чрезвычайное положение\|чрезвычайном положении]]** в виде пандемий, вымирания и т.д.
