--- a/src/site/notes/Кейс Геофилософия/1 Лекции/Лекция 09 - Темная Земля.md
+++ b/src/site/notes/Кейс Геофилософия/1 Лекции/Лекция 09 - Темная Земля.md
@@ -1,11 +1,11 @@
 ---
-{"dg-publish":true,"dg-path":"Кейс Геофилософия/1 Лекции/Лекция 9 – Темная Земля","permalink":"/kejs-geofilosofiya/1-lekczii/lekcziya-9-temnaya-zemlya/"}
+{"dg-publish":true,"dg-path":"Кейс Геофилософия/1 Лекции/Лекция 9 – Темная Земля","permalink":"/kejs-geofilosofiya/1-lekczii/lekcziya-9-temnaya-zemlya/","dgShowLocalGraph":true}
 ---
 
 
 # Лекция 9: Темная Земля. Агамбен и философия нефти
 
-**Основные понятия:** [[Темная земля\|Темная земля]], [[Гея vs Хтонь\|Гея vs Хтонь]], [[Танатосфера\|Танатосфера]], [[Философия нефти и петромодерн\|Философия нефти и петромодерн]], [[Ископаемая власть\|Ископаемая власть]]
+**Основные понятия:** [[Темная земля\|Темная земля]], [[Гея vs Хтонь\|Гея vs Хтонь]], [[Танатосфера\|Танатосфера]], [[Кейс Геофилософия/2 Темы/Философия нефти и петромодерн\|Философия нефти и петромодерн]], [[Ископаемая власть\|Ископаемая власть]]
 **Ключевые авторы:** [[Агамбен, Джорджо\|Агамбен, Джорджо]], [[Шварц, Елена\|Шварц, Елена]]
 **Источники:** [[Статья - Гея и Хтонь (Агамбен)\|Статья - Гея и Хтонь (Агамбен)]], [[Книга - Атлас Петрамодерна\|Книга - Атлас Петрамодерна]]
 
@@ -21,7 +21,7 @@
 - **Человек — хтоническое существо**: *homo* происходит от *humus* (почва).
 - **Забвение [[Хтонь\|Хтони]]**: Экологический кризис связан с использованием подземных ресурсов (нефти) и забвением [[Хтонь\|Хтони]]. Страх смерти порожден отделением жизни ([[Гея\|Гея]]) от смерти ([[Танатосфера\|Танатосфера]], [[Хтонь\|Хтонь]]).
 
-### 3. [[Философия нефти и петромодерн\|Философия нефти и петромодерн]]
+### 3. [[Кейс Геофилософия/2 Темы/Философия нефти и петромодерн\|Философия нефти и петромодерн]]
 - **[[Петромодерн\|Петромодерн]]**: Мы живем в эпоху, где нефть является главным агентом, определяющим современность.
 - **"[[Книга - Атлас Петрамодерна\|Книга - Атлас Петрамодерна]]"**: Книга картографирует скрытые связи нефти с различными сферами жизни.
 - **Примеры влияния нефти**:
