--- a/src/site/notes/Кейс Геофилософия/2 Темы/Темы Оглавление.md
+++ b/src/site/notes/Кейс Геофилософия/2 Темы/Темы Оглавление.md
@@ -1,24 +1,24 @@
 ---
-{"dg-publish":true,"dg-path":"Кейс Геофилософия/Темы Оглавление","permalink":"/kejs-geofilosofiya/temy-oglavlenie/","pinned":true}
+{"dg-publish":true,"dg-path":"Кейс Геофилософия/2 Темы/Темы Оглавление","permalink":"/kejs-geofilosofiya/2-temy/temy-oglavlenie/","pinned":true,"dgShowLocalGraph":true}
 ---
 
 
 # Темы
 
 - [[Кейс Геофилософия/2 Темы/Антикоперниканский поворот\|Антикоперниканский поворот]]
-- [[Геофеноменология\|Геофеноменология]]
-- [[Геополитика\|Геополитика]]
-- [[История картографии\|История картографии]]
-- [[Критика антропоцентризма\|Критика антропоцентризма]]
-- [[Критика картографии\|Критика картографии]]
-- [[Метафизика ландшафта\|Метафизика ландшафта]]
-- [[Множественность (миров, природ, земель)\|Множественность (миров, природ, земель)]]
-- [[Политическая земля\|Политическая земля]]
-- [[Политики заботы\|Политики заботы]]
-- [[Постгуманизм\|Постгуманизм]]
-- [[Практическая геофисофия\|Практическая геофисофия]]
-- [[Проблема оснований и безосновности\|Проблема оснований и безосновности]]
-- [[Смерть больших нарративов\|Смерть больших нарративов]]
-- [[Спекулятивный поворот\|Спекулятивный поворот]]
-- [[Темные теории\|Темные теории]]
-- [[Философия нефти и петромодерн\|Философия нефти и петромодерн]]
+- [[Кейс Геофилософия/2 Темы/Геофеноменология\|Геофеноменология]]
+- [[Кейс Геофилософия/2 Темы/Геополитика\|Геополитика]]
+- [[Кейс Геофилософия/2 Темы/История картографии\|История картографии]]
+- [[Кейс Геофилософия/2 Темы/Критика антропоцентризма\|Критика антропоцентризма]]
+- [[Кейс Геофилософия/2 Темы/Критика картографии\|Критика картографии]]
+- [[Кейс Геофилософия/2 Темы/Метафизика ландшафта\|Метафизика ландшафта]]
+- [[Кейс Геофилософия/2 Темы/Множественность (миров, природ, земель)\|Множественность (миров, природ, земель)]]
+- [[Кейс Геофилософия/2 Темы/Политическая земля\|Политическая земля]]
+- [[Кейс Геофилософия/2 Темы/Политики заботы\|Политики заботы]]
+- [[Кейс Геофилософия/2 Темы/Постгуманизм\|Постгуманизм]]
+- [[Кейс Геофилософия/2 Темы/Практическая геофилософия\|Практическая геофилософия]]
+- [[Кейс Геофилософия/2 Темы/Проблема оснований и безосновности\|Проблема оснований и безосновности]]
+- [[Кейс Геофилософия/2 Темы/Смерть больших нарративов\|Смерть больших нарративов]]
+- [[Кейс Геофилософия/2 Темы/Спекулятивный поворот\|Спекулятивный поворот]]
+- [[Кейс Геофилософия/2 Темы/Темные теории\|Темные теории]]
+- [[Кейс Геофилософия/2 Темы/Философия нефти и петромодерн\|Философия нефти и петромодерн]]
