--- a/src/site/notes/Кейс Геофилософия/1 Лекции/Лекция 04 - Политики заботы.md
+++ b/src/site/notes/Кейс Геофилософия/1 Лекции/Лекция 04 - Политики заботы.md
@@ -1,31 +1,31 @@
 ---
-{"dg-publish":true,"dg-path":"Кейс Геофилософия/1 Лекции/Лекция 4 – Политики заботы","permalink":"/kejs-geofilosofiya/1-lekczii/lekcziya-4-politiki-zaboty/"}
+{"dg-publish":true,"dg-path":"Кейс Геофилософия/1 Лекции/Лекция 4 – Политики заботы","permalink":"/kejs-geofilosofiya/1-lekczii/lekcziya-4-politiki-zaboty/","dgShowLocalGraph":true}
 ---
 
 # Лекция 4: Политики заботы. Поврежденная земля, Мортон и Харауэй
 
-**Основные понятия:** [[Поврежденная земля\|Поврежденная земля]], [[Антропоцен\|Антропоцен]], [[Хтулхуцен\|Хтулхуцен]], [[Гиперобъекты\|Гиперобъекты]], [[Темная экология\|Темная экология]], [[Политики заботы\|Политики заботы]], [[Симпоэзис\|Симпоэзис]]
+**Основные понятия:** [[Поврежденная земля\|Поврежденная земля]], [[Кейс Геофилософия/3 Понятия/Антропоцен\|Антропоцен]], [[Хтулхуцен\|Хтулхуцен]], [[Гиперобъекты\|Гиперобъекты]], [[Темная экология\|Темная экология]], [[Кейс Геофилософия/2 Темы/Политики заботы\|Политики заботы]], [[Симпоэзис\|Симпоэзис]]
 **Ключевые авторы:** [[Мортон, Тимоти\|Мортон, Тимоти]], [[Харауэй, Донна\|Харауэй, Донна]], [[Брайдотти, Рози\|Брайдотти, Рози]]
 
 ## Тезисы
 
 ### 1. Что такое [[Поврежденная земля\|Поврежденная земля]]?
 - Это состояние планеты, вызванное тремя факторами:
-    1.  **[[Антропоцен\|Антропоцен]]**: Геологическая эпоха, когда деятельность человека стала главным фактором изменения [[Земля\|Земли]].
+    1.  **[[Кейс Геофилософия/3 Понятия/Антропоцен\|Антропоцен]]**: Геологическая эпоха, когда деятельность человека стала главным фактором изменения [[Земля\|Земли]].
     2.  **Отдаление Земли**: Философская позиция "парения над миром" ("[[Глаз Бога\|Глаз Бога]]").
     3.  **[[Опасный постгуманизм\|Опасный постгуманизм]]** ([[Брайдотти, Рози\|Рози Брайдотти]]): Технологии, которые обходятся без человека и несут опасность.
 
 ### 2. [[Мортон, Тимоти\|Мортон, Тимоти]]: [[Гиперобъекты\|Гиперобъекты]] и [[Темная экология\|Темная экология]]
 - **[[Гиперобъекты\|Гиперобъекты]]**: Это сущности, настолько растянутые во времени и пространстве, что мы не можем воспринять их целиком. Примеры: глобальное потепление, пластик, капитализм.
-- **Характеристики гиперобъектов**: [[Вязкость\|Вязкость]], [[другая темпоральность\|другая темпоральность]], [[нелокальность\|нелокальность]].
+- **Характеристики гиперобъектов**: [[Кейс Геофилософия/3 Понятия/Вязкость\|Вязкость]], [[другая темпоральность\|другая темпоральность]], [[нелокальность\|нелокальность]].
 - **[[Темная экология\|Темная экология]]**: Это "экология без Природы". [[Мортон, Тимоти\|Мортон]] утверждает, что сама концепция "Природы" (как чего-то чистого) — это конструкт.
 - **Философия после конца мира**: Мир как универсальное понятие закончился. Мы живем в окружении гиперобъектов.
 
-### 3. [[Харауэй, Донна\|Харауэй, Донна]]: от [[Антропоцен\|Антропоцена]] к [[Хтулхуцен\|Хтулхуцену]]
-- **Критика [[Антропоцен\|Антропоцена]]**: [[Харауэй, Донна\|Харауэй]] считает, что этот термин все еще ставит в центр Человека.
+### 3. [[Харауэй, Донна\|Харауэй, Донна]]: от [[Кейс Геофилософия/3 Понятия/Антропоцен\|Антропоцена]] к [[Хтулхуцен\|Хтулхуцену]]
+- **Критика [[Кейс Геофилософия/3 Понятия/Антропоцен\|Антропоцена]]**: [[Харауэй, Донна\|Харауэй]] считает, что этот термин все еще ставит в центр Человека.
 - **[[Хтулхуцен\|Хтулхуцен]]**: Новая эпоха, названная в честь хтонических (земных) существ. Это время, когда мы учимся **"оставаться со смутой" (staying with the trouble)**.
 - **Ключевые практики Хтулхуцена**:
     - **[[Симпоэзис\|Симпоэзис]]**: "Со-творение", совместное становление с другими видами.
     - **[[Компост\|Компост]], а не постчеловек**: Мы все — часть одной компостной кучи.
-    - **[[Политики заботы\|Политики заботы]]**: Создание инклюзивных сообществ.
-    - **[[Быть приземленным\|Быть приземленным]]**: Признание своей укорененности в [[Земля\|Земле]].
+    - **[[Кейс Геофилософия/2 Темы/Политики заботы\|Политики заботы]]**: Создание инклюзивных сообществ.
+    - **[[Кейс Геофилософия/3 Понятия/Быть приземленным\|Быть приземленным]]**: Признание своей укорененности в [[Земля\|Земле]].
