--- a/src/site/notes/Кейс Геофилософия/1 Лекции/Лекция 07 - Теория Геи.md
+++ b/src/site/notes/Кейс Геофилософия/1 Лекции/Лекция 07 - Теория Геи.md
@@ -1,11 +1,11 @@
 ---
-{"dg-publish":true,"dg-path":"Кейс Геофилософия/1 Лекции/Лекция 7 – Теория Геи","permalink":"/kejs-geofilosofiya/1-lekczii/lekcziya-7-teoriya-gei/"}
+{"dg-publish":true,"dg-path":"Кейс Геофилософия/1 Лекции/Лекция 7 – Теория Геи","permalink":"/kejs-geofilosofiya/1-lekczii/lekcziya-7-teoriya-gei/","dgShowLocalGraph":true}
 ---
 
 
 # Лекция 7: Теория Геи (Лавлок и Латур)
 
-**Основные понятия:** [[Теория Геи\|Теория Геи]], [[Маргаритковый мир\|Маргаритковый мир]], [[Геоистория\|Геоистория]], [[Приземленные\|Приземленные]]
+**Основные понятия:** [[Теория Геи\|Теория Геи]], [[Маргаритковый мир\|Маргаритковый мир]], [[Кейс Геофилософия/3 Понятия/Геоистория\|Геоистория]], [[Приземленные\|Приземленные]]
 **Ключевые авторы:** [[Лавлок, Джеймс\|Лавлок, Джеймс]], [[Латур, Бруно\|Латур, Бруно]], [[Хуэй, Юк\|Хуэй, Юк]]
 
 ## Тезисы
@@ -16,14 +16,14 @@
 - **Критика теории**: Технофобность, антропоцентризм, метафоричность.
 - **Альтернатива — [[Теория Медеи\|Теория Медеи]]**: Жизнь на [[Земля\|Земле]] существует вопреки постоянным процессам самоуничтожения.
 
-### 2. [[Латур, Бруно\|Латур, Бруно]]: от [[Гея\|Геи]] к [[Геоистория\|Геоистории]]
-- **[[Геоистория\|Геоистория]]**: [[Латур, Бруно\|Латур]] призывает перейти от "истории" (где [[Земля\|Земля]] — пассивный фон) к "геоистории", где [[Земля\|Земля]] — **полноценный действующий актор**.
+### 2. [[Латур, Бруно\|Латур, Бруно]]: от [[Гея\|Геи]] к [[Кейс Геофилософия/3 Понятия/Геоистория\|Геоистории]]
+- **[[Кейс Геофилософия/3 Понятия/Геоистория\|Геоистория]]**: [[Латур, Бруно\|Латур]] призывает перейти от "истории" (где [[Земля\|Земля]] — пассивный фон) к "геоистории", где [[Земля\|Земля]] — **полноценный действующий актор**.
 - **Проклятие Атласа**: [[Латур, Бруно\|Латур]] критикует традиционную репрезентацию [[Земля\|Земли]] (глобус) за то, что она представляет планету как гладкий, безпроблемный объем.
 
-### 3. [[Приземленные\|Приземленные]] и [[Политическая земля\|Политическая земля]]
+### 3. [[Приземленные\|Приземленные]] и [[Кейс Геофилософия/2 Темы/Политическая земля\|Политическая земля]]
 - **Переход от "людей" к "приземленным"**: "[[Приземленные\|Приземленные]]" — те, кто осознал свою неразрывную связь с [[Земля\|Землей]].
 - **[[Земля\|Земля]] — не мирная мать-природа**: Она находится в состоянии войны с человечеством.
 - **Вопрос о договоре**: [[Латур, Бруно\|Латур]] ставит вопрос, можно ли заключить новый политический договор с самой [[Земля\|Землей]].
 
 ### 4. [[Хуэй, Юк\|Хуэй, Юк]]: [[Искусственная земля\|Искусственная земля]]
-- **[[Антропоцен\|Антропоцен]]** — это завершение создания **"[[Искусственная земля\|Искусственная земля]]"** как кибернетической системы. Благодаря технологиям, [[Земля\|Земля]] впервые "увидела" себя.
+- **[[Кейс Геофилософия/3 Понятия/Антропоцен\|Антропоцен]]** — это завершение создания **"[[Искусственная земля\|Искусственная земля]]"** как кибернетической системы. Благодаря технологиям, [[Земля\|Земля]] впервые "увидела" себя.
