--- a/src/site/notes/Кейс Геофилософия/1 Лекции/Лекция 10 - Карты и картография.md
+++ b/src/site/notes/Кейс Геофилософия/1 Лекции/Лекция 10 - Карты и картография.md
@@ -1,16 +1,16 @@
 ---
-{"dg-publish":true,"dg-path":"Кейс Геофилософия/1 Лекции/Лекция 10 – Карты и картография","permalink":"/kejs-geofilosofiya/1-lekczii/lekcziya-10-karty-i-kartografiya/"}
+{"dg-publish":true,"dg-path":"Кейс Геофилософия/1 Лекции/Лекция 10 – Карты и картография","permalink":"/kejs-geofilosofiya/1-lekczii/lekcziya-10-karty-i-kartografiya/","dgShowLocalGraph":true}
 ---
 
 # Лекция 10: Карты и картография. Взгляд на Землю
 
-**Основные понятия:** [[История картографии\|История картографии]], [[Критика картографии\|Критика картографии]], [[Карта как мировоззрение\|Карта как мировоззрение]], [[Синоптическая vs Навигационная интерпретация\|Синоптическая vs Навигационная интерпретация]]
+**Основные понятия:** [[Кейс Геофилософия/2 Темы/История картографии\|История картографии]], [[Кейс Геофилософия/2 Темы/Критика картографии\|Критика картографии]], [[Карта как мировоззрение\|Карта как мировоззрение]], [[Синоптическая vs Навигационная интерпретация\|Синоптическая vs Навигационная интерпретация]]
 **Ключевые авторы:** [[Берг, Томас\|Берг, Томас]], [[Латур, Бруно\|Латур, Бруно]], [[Ортелий, Абрахам\|Ортелий, Абрахам]]
 **Источники:** [[Книга - Театр мира (Берг)\|Книга - Театр мира (Берг)]]
 
 ## Тезисы
 
-### 1. [[Берг, Томас\|Берг, Томас]] и [[История картографии\|История картографии]]
+### 1. [[Берг, Томас\|Берг, Томас]] и [[Кейс Геофилософия/2 Темы/История картографии\|История картографии]]
 - Книга [[Берг, Томас\|Томаса Берга]] "[[Книга - Театр мира (Берг)\|Театр мира]]" прослеживает интеллектуальную историю картографии.
 - **[[Карта как мировоззрение\|Карта как мировоззрение]]**: [[Берг, Томас\|Берг]] утверждает, что карты — это не просто отражение мира, а способ его структурирования.
 - **Метафора "Весь мир — театр"**: Восходит к атласу [[Ортелий, Абрахам\|Абрахама Ортелия]] (1570).
@@ -20,7 +20,7 @@
     - **Средневековье**: Преобладание текстовой традиции, **"священная география"**.
     - **Возрождение**: Секуляризация карт ([[Мауро, Фра\|Мауро, Фра]]), появление профессии картографа.
 
-### 2. [[Латур, Бруно\|Латур, Бруно]] и [[Критика картографии\|Критика картографии]]
+### 2. [[Латур, Бруно\|Латур, Бруно]] и [[Кейс Геофилософия/2 Темы/Критика картографии\|Критика картографии]]
 - **[[Критика репрезентации\|Критика репрезентации]]**: Карта — это не отражение, а **сборка**.
 - **Карта как событие**: Карта — это не статичный объект, а процесс, **"картографирование"**.
 - **[[Синоптическая vs Навигационная интерпретация\|Синоптическая vs Навигационная интерпретация]]**:
