--- a/src/site/notes/Кейс Геофилософия/2 Темы/Антикоперниканский поворот.md
+++ b/src/site/notes/Кейс Геофилософия/2 Темы/Антикоперниканский поворот.md
@@ -1,3 +1,21 @@
 ---
-{"dg-publish":true,"dg-path":"Кейс Геофилософия/Темы/Антикоперниканский поворот","permalink":"/kejs-geofilosofiya/temy/antikopernikanskij-povorot/"}
+{"dg-publish":true,"dg-path":"Кейс Геофилософия/2 Темы/Антикоперниканский поворот","permalink":"/kejs-geofilosofiya/2-temy/antikopernikanskij-povorot/","dgShowLocalGraph":true}
 ---
+
+
+# Антикоперниканский поворот
+
+**Антикоперниканский поворот** — это философская тенденция, направленная против последствий "коперниканской революции" [[Кант, Иммануил\|Иммануила Канта]] в философии.
+
+## Суть проблемы
+- **Коперниканская революция Канта**: Подобно Копернику, Кант сместил фокус философии с объекта на субъект.
+- **Последствия**: Как утверждают [[Латур, Бруно\|Латур, Бруно]], [[Гуссерль, Эдмунд\|Гуссерль, Эдмунд]] и теоретики [[Кейс Геофилософия/2 Темы/Темные теории\|спекулятивного реализма]], это привело к тому, что вся философия стала "вращаться вокруг субъекта", породив [[корреляционизм\|корреляционизм]].
+
+## Суть поворота
+- **Цель**: Вернуть философии доступ к реальности вне человека и найти основания для опыта не в субъекте, а в [[Земля\|Земле]].
+- **Это не антинаучный поворот**: Он не оспаривает астрономию, а критикует философский антропоцентризм.
+
+## Ключевые фигуры
+- **[[Гуссерль, Эдмунд\|Гуссерль, Эдмунд]]**: Первым провозгласил этот поворот в работе "[[Земля как первый ковчег\|Земля как первый ковчег]]".
+- **[[Латур, Бруно\|Латур, Бруно]]**: Активно использует этот термин, призывая перейти от "людей" к "[[Приземленные\|Приземленные]]".
+- **[[Кейс Геофилософия/2 Темы/Темные теории\|Темные теории]]**: Все течение можно рассматривать как реализацию антикоперниканского поворота.
