Published multiple files

--- a/src/site/notes/Обо мне.md
+++ b/src/site/notes/Обо мне.md
@@ -20,9 +20,9 @@
 
 Последние пару лет погрузился в тему **применения AI в исследованиях** и смежных областях:
 
-- Развивал навыки использования AI в исследованиях в [AI LAB](https://ai-labtech/) у Дмитрия Соловьева
-- Учился созданию и использованию AI-инструментов для управления знаниями в [AI Mindset Lab](https://aimindsetorg/) у Глеба Калинина
-- Участвовал в создании, тестировании и продвижении [инструментов на базе AI](https://blogfastunaru/insightchat) в компании Tiburon Research
+- Развивал навыки использования AI в исследованиях в [AI LAB](https://ai-lab.tech/) у Дмитрия Соловьева
+- Учился созданию и использованию AI-инструментов для управления знаниями в [AI Mindset Lab](https://aimindset.org/) у Глеба Калинина
+- Участвовал в создании, тестировании и продвижении [инструментов на базе AI](https://blog.fastuna.ru/insightchat) в компании Tiburon Research
 
 →→ Больше про мой опыт в исследованиях в [резюме](https://andreysychev.com/issledovaniya/rezyume/)
 
