Published multiple files

--- a/src/site/notes/Кейс Геофилософия/3 Понятия/Понятия Оглавление.md
+++ b/src/site/notes/Кейс Геофилософия/3 Понятия/Понятия Оглавление.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-path":"Кейс Геофилософия/2 Понятия/Понятия Оглавление","permalink":"/kejs-geofilosofiya/2-ponyatiya/ponyatiya-oglavlenie/","pinned":true,"dgShowLocalGraph":true}
+{"dg-publish":true,"dg-path":"Кейс Геофилософия/2 Понятия/Понятия Оглавление","permalink":"/kejs-geofilosofiya/2-ponyatiya/ponyatiya-oglavlenie/","pinned":true}
 ---
 
 
