--- a/src/site/notes/Кейс Геофилософия/1 Лекции/Лекции Оглавление.md
+++ b/src/site/notes/Кейс Геофилософия/1 Лекции/Лекции Оглавление.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-path":"Кейс Геофилософия/1 Лекции/ Лекции Оглавление","permalink":"/kejs-geofilosofiya/1-lekczii/lekczii-oglavlenie/","pinned":true,"dgShowLocalGraph":true}
+{"dg-publish":true,"dg-path":"Кейс Геофилософия/1 Лекции/ Лекции Оглавление","permalink":"/kejs-geofilosofiya/1-lekczii/lekczii-oglavlenie/","pinned":true}
 ---
 
 # Лекции курса "Введение в геофилософию"
