Published multiple files

--- a/src/site/notes/Обо мне.md
+++ b/src/site/notes/Обо мне.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/obo-mne/","pinned":true,"tags":["gardenEntry"]}
+{"dg-publish":true,"permalink":"/obo-mne/","hideInGraph":true,"pinned":true,"tags":["gardenEntry"]}
 ---
 
 ![andrey photo circle 1.png|200](/img/user/Images/andrey%20photo%20circle%201.png)
