Published multiple files

--- a/src/site/notes/Кейс Геофилософия/1 Лекции/Лекция 09 - Темная Земля.md
+++ b/src/site/notes/Кейс Геофилософия/1 Лекции/Лекция 09 - Темная Земля.md
@@ -5,7 +5,7 @@
 
 # Лекция 9: Темная Земля. Агамбен и философия нефти
 
-**Основные понятия:** [[Темная земля\|Темная земля]], [[Гея vs Хтонь\|Гея vs Хтонь]], [[Танатосфера\|Танатосфера]], [[Кейс Геофилософия/2 Темы/Философия нефти и петромодерн\|Философия нефти и петромодерн]], [[Ископаемая власть\|Ископаемая власть]]
+**Основные понятия:** [[Темная земля\|Темная земля]], [[Кейс Геофилософия/3 Понятия/Гея vs Хтонь\|Гея vs Хтонь]], [[Танатосфера\|Танатосфера]], [[Кейс Геофилософия/2 Темы/Философия нефти и петромодерн\|Философия нефти и петромодерн]], [[Ископаемая власть\|Ископаемая власть]]
 **Ключевые авторы:** [[Агамбен, Джорджо\|Агамбен, Джорджо]], [[Шварц, Елена\|Шварц, Елена]]
 **Источники:** [[Статья - Гея и Хтонь (Агамбен)\|Статья - Гея и Хтонь (Агамбен)]], [[Книга - Атлас Петрамодерна\|Книга - Атлас Петрамодерна]]
 
@@ -15,7 +15,7 @@
 - Современная философия переживает "темный поворот", акцентируя внимание на жутком и непознаваемом.
 - Мы переходим от "светлой земли" к **[[Темная земля\|темной земле]]** — подземной, связанной со смертью.
 
-### 2. [[Агамбен, Джорджо\|Агамбен, Джорджо]]: [[Гея vs Хтонь\|Гея vs Хтонь]]
+### 2. [[Агамбен, Джорджо\|Агамбен, Джорджо]]: [[Кейс Геофилософия/3 Понятия/Гея vs Хтонь\|Гея vs Хтонь]]
 - В статье "[[Статья - Гея и Хтонь (Агамбен)\|Гея и Хтонь]]" [[Агамбен, Джорджо\|Агамбен]] критикует [[Теория Геи\|Теория Геи]] за игнорирование подземного мира.
 - **[[Хтонь\|Хтонь]] первична**: [[Гея\|Гея]] — это лишь "мантия", покрывающая [[Хтонь\|Хтонь]]. [[Хтонь\|Хтонь]] — это бесформенное, скрытое дно.
 - **Человек — хтоническое существо**: *homo* происходит от *humus* (почва).
