--- a/src/site/notes/Кейс Геофилософия/2 Темы/Проблема оснований и безосновности.md
+++ b/src/site/notes/Кейс Геофилософия/2 Темы/Проблема оснований и безосновности.md
@@ -14,6 +14,6 @@
 - Любая попытка **обоснования** в конечном счете упирается в нечто, что само не имеет оснований.
 - **Формула**: **"[[Кейс Геофилософия/3 Понятия/Безосновность (Грунд)\|Безосновность (Грунд)]] есть основание обоснованного"**.
 
-## [[Геологическое как бессознательное\|Геологическое как бессознательное]]
+## [[Кейс Геофилософия/3 Понятия/Геологическое как бессознательное\|Геологическое как бессознательное]]
 - [[Вудард, Бен\|Вудард, Бен]] утверждает, что **[[геологическое\|геологическое]]** является метафорой для [[Кейс Геофилософия/3 Понятия/Безосновность (Грунд)\|Безосновность (Грунд)]].
 - Геологические процессы — это то, что постоянно влияет на нас, но находится за пределами нашего полного понимания, подобно бессознательному.
