--- a/src/site/notes/Кейс Геофилософия/2 Темы/Темы Оглавление.md
+++ b/src/site/notes/Кейс Геофилософия/2 Темы/Темы Оглавление.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-path":"Кейс Геофилософия/2 Темы/Темы Оглавление","permalink":"/kejs-geofilosofiya/2-temy/temy-oglavlenie/","pinned":true}
+{"dg-publish":true,"dg-path":"Кейс Геофилософия/2 Темы/Темы Оглавление","permalink":"/kejs-geofilosofiya/2-temy/temy-oglavlenie/","hideInGraph":true,"pinned":true}
 ---
 
 
