--- a/src/site/notes/Кейс Геофилософия/3 Понятия/Безосновность (Грунд).md
+++ b/src/site/notes/Кейс Геофилософия/3 Понятия/Безосновность (Грунд).md
@@ -11,8 +11,8 @@
 - **Парадокс обоснования**: Любая попытка найти рациональное **[[Обоснование\|Обоснование]]** в конечном итоге упирается в нечто, что само не имеет оснований. Как сформулировано в лекции, **"безосновность есть основание обоснованного"**.
 
 ## Связь с геологией
-- **[[Геологическое как бессознательное\|Геологическое как бессознательное]]**: [[Вудард, Бен\|Вудард, Бен]] утверждает, что **[[геологическое\|геологическое]]** является главной метафорой безосновности.
-- **[[Глубинное время (Deep Time)\|Глубинное время (Deep Time)]]**: Открытие геологического "глубинного времени" [[Хаттон, Джеймс\|Хаттоном]] подорвало идею единого первоисточника творения.
+- **[[Кейс Геофилософия/3 Понятия/Геологическое как бессознательное\|Геологическое как бессознательное]]**: [[Вудард, Бен\|Вудард, Бен]] утверждает, что **[[геологическое\|геологическое]]** является главной метафорой безосновности.
+- **[[Кейс Геофилософия/3 Понятия/Глубинное время (Deep Time)\|Глубинное время (Deep Time)]]**: Открытие геологического "глубинного времени" [[Хаттон, Джеймс\|Хаттоном]] подорвало идею единого первоисточника творения.
 
 ## Значение
 - Безосновность — это не просто отсутствие, а активная, жуткая и странная сила, с которой сталкивается мышление.
