--- a/src/site/notes/Кейс Геофилософия/3 Понятия/Понятия Оглавление.md
+++ b/src/site/notes/Кейс Геофилософия/3 Понятия/Понятия Оглавление.md
@@ -14,13 +14,13 @@
 - [[Кейс Геофилософия/3 Понятия/Быть приземленным\|Быть приземленным]]
 - [[Кейс Геофилософия/3 Понятия/Вязкость\|Вязкость]]
 - [[Кейс Геофилософия/3 Понятия/Геоистория\|Геоистория]]
-- [[Геологическое как бессознательное\|Геологическое как бессознательное]]
+- [[Кейс Геофилософия/3 Понятия/Геологическое как бессознательное\|Геологическое как бессознательное]]
 - [[Кейс Геофилософия/2 Темы/Геофеноменология\|Геофеноменология]]
 - [[Гея\|Гея]]
-- [[Гея vs Хтонь\|Гея vs Хтонь]]
+- [[Кейс Геофилософия/3 Понятия/Гея vs Хтонь\|Гея vs Хтонь]]
 - [[Гиперобъекты\|Гиперобъекты]]
 - [[Глаз Бога\|Глаз Бога]]
-- [[Глубинное время (Deep Time)\|Глубинное время (Deep Time)]]
+- [[Кейс Геофилософия/3 Понятия/Глубинное время (Deep Time)\|Глубинное время (Deep Time)]]
 - [[Детерриторизация и Ретерриторизация\|Детерриторизация и Ретерриторизация]]
 - [[Другая темпоральность\|Другая темпоральность]]
 - [[Жить в касании\|Жить в касании]]
