--- a/src/site/notes/Кейс Геофилософия/1 Лекции/Лекция 03 - Земля без оснований.md
+++ b/src/site/notes/Кейс Геофилософия/1 Лекции/Лекция 03 - Земля без оснований.md
@@ -4,7 +4,7 @@
 
 # Лекция 3: Земля без оснований. Как не провалиться в бездну?
 
-**Основные понятия:** [[Кейс Геофилософия/2 Темы/Проблема оснований и безосновности\|Проблема оснований и безосновности]], [[Темная геофилософия\|Темная геофилософия]], [[Геологическое как бессознательное\|Геологическое как бессознательное]]
+**Основные понятия:** [[Кейс Геофилософия/2 Темы/Проблема оснований и безосновности\|Проблема оснований и безосновности]], [[Темная геофилософия\|Темная геофилософия]], [[Кейс Геофилософия/3 Понятия/Геологическое как бессознательное\|Геологическое как бессознательное]]
 **Ключевые авторы:** [[Вудард, Бен\|Вудард, Бен]], [[Шеллинг, Фридрих\|Шеллинг, Фридрих]], [[Делёз, Жиль\|Делёз, Жиль]], [[Кант, Иммануил\|Кант, Иммануил]]
 
 ## Тезисы
@@ -28,6 +28,6 @@
 - [[Вудард, Бен\|Вудард]] связывает это с идеей, что **[[геологическое\|геологическое]] связано с воображаемым**.
 
 ### 4. [[Вудард, Бен\|Вудард, Бен]] и [[Темная геофилософия\|Темная геофилософия]]
-- **[[Геологическое как бессознательное\|Геологическое как бессознательное]]**: Геологические процессы — это то безосновное, что влияет на нас, но не поддается полному осмыслению.
+- **[[Кейс Геофилософия/3 Понятия/Геологическое как бессознательное\|Геологическое как бессознательное]]**: Геологические процессы — это то безосновное, что влияет на нас, но не поддается полному осмыслению.
 - Вудард критикует [[Делёз, Жиль\|Делёза]] за то, что его геофилософия слишком привязана к **"человеческой поверхности"**.
 - **Итог**: Провалиться в бездну — это и есть необходимый геофилософский опыт.
