Published multiple files

--- a/src/site/notes/Кейс Геофилософия/3 Понятия/Автохтония.md
+++ b/src/site/notes/Кейс Геофилософия/3 Понятия/Автохтония.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-path":"Кейс Геофилософия/3 Понятия/Автохтония","permalink":"/kejs-geofilosofiya/3-ponyatiya/avtohtoniya/","dgShowLocalGraph":true}
+{"dg-publish":true,"dg-path":"Кейс Геофилософия/3 Понятия/Автохтония","permalink":"/kejs-geofilosofiya/3-ponyatiya/avtohtoniya/"}
 ---
 
 # Автохтония
