Published multiple files

--- a/src/site/notes/Исследования/Резюме.md
+++ b/src/site/notes/Исследования/Резюме.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/issledovaniya/rezyume/","hideInGraph":true,"pinned":true}
+{"dg-publish":true,"permalink":"/issledovaniya/rezyume/","pinned":true,"dgShowLocalGraph":true}
 ---
 
 
