--- a/src/site/notes/Обо мне.md
+++ b/src/site/notes/Обо мне.md
@@ -40,6 +40,6 @@
 - Ведущие выступают в роли проводников группы в физическом пространстве и пространстве психики,
 - Участники делятся друг с другом полученным опытом
 
-→→ Больше про психологические путешествия в нашем [телеграм-канале](https://tme/outsideinsight)
+→→ Больше про психологические путешествия в нашем [телеграм-канале](https://t.me/outsideinsight)
 
 МОИ КОНТАКТЫ: [Telegram](https://t.me/andreysychev), [E-mail](mailto:sychevonline@gmail@com)
