Published multiple files

--- a/src/site/notes/Кейс Геофилософия/Индекс –база знаний по Геофилософии.md
+++ b/src/site/notes/Кейс Геофилософия/Индекс –база знаний по Геофилософии.md
@@ -14,8 +14,8 @@
 ## 🧭 Основные разделы
 
 - **[[Кейс Геофилософия/1 Лекции/Индекс –Лекции\|1 Лекции]]**: Полные конспекты всех 10 лекций курса.
-- **[[Кейс Геофилософия/2 Темы/Индекс–Темы\|2 Темы]]**: Обзор центральных тем, проходящих через весь курс.
-- **[[Кейс Геофилософия/3 Понятия/Индекс – Понятия\|3 Понятия]]**: Словарь ключевых терминов геофилософии.
+- **[[Кейс Геофилософия/2 Темы/0 Индекс–Темы\|2 Темы]]**: Обзор центральных тем, проходящих через весь курс.
+- **[[Кейс Геофилософия/3 Понятия/0 Индекс – Понятия\|3 Понятия]]**: Словарь ключевых терминов геофилософии.
 - **[[04 Авторы MOC\|04 Авторы MOC]]**: Заметки о философах и исследователях.
 - **[[05 Источники MOC\|05 Источники MOC]]**: Информация об основных текстах, на которые опирается курс.
 
