Published multiple files

--- a/src/site/notes/Кейс Геофилософия/3 Понятия/0 Индекс – Понятия.md
+++ b/src/site/notes/Кейс Геофилософия/3 Понятия/0 Индекс – Понятия.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-path":"Кейс Геофилософия/3 Понятия/0 Индекс – понятия","permalink":"/kejs-geofilosofiya/3-ponyatiya/0-indeks-ponyatiya/","pinned":true}
+{"dg-publish":true,"dg-path":"Кейс Геофилософия/3 Понятия/0 Индекс – понятия","permalink":"/kejs-geofilosofiya/3-ponyatiya/0-indeks-ponyatiya/","hideInGraph":true,"pinned":true}
 ---
 
 
