--- a/src/site/notes/Кейс Геофилософия/4 Авторы/0 Индекс — Авторы.md
+++ b/src/site/notes/Кейс Геофилософия/4 Авторы/0 Индекс — Авторы.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-path":"Кейс Геофилософия/4 Авторы/0 Индекс — Авторы","permalink":"/kejs-geofilosofiya/4-avtory/0-indeks-avtory/","pinned":true}
+{"dg-publish":true,"dg-path":"Кейс Геофилософия/4 Авторы/0 Индекс — Авторы","permalink":"/kejs-geofilosofiya/4-avtory/0-indeks-avtory/","hideInGraph":true,"pinned":true}
 ---
 
 # Авторы
