--- a/src/site/notes/Кейс Геофилософия/5 Источники/0 Индекс – Источники.md
+++ b/src/site/notes/Кейс Геофилософия/5 Источники/0 Индекс – Источники.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-path":"Кейс Геофилософия/5 Источники/0 Индекс – Источники","permalink":"/kejs-geofilosofiya/5-istochniki/0-indeks-istochniki/","pinned":true}
+{"dg-publish":true,"dg-path":"Кейс Геофилософия/5 Источники/0 Индекс – Источники","permalink":"/kejs-geofilosofiya/5-istochniki/0-indeks-istochniki/","hideInGraph":true,"pinned":true}
 ---
 
 
