--- a/src/site/notes/Кейс Геофилософия/2 Темы/0 Индекс–Темы.md
+++ b/src/site/notes/Кейс Геофилософия/2 Темы/0 Индекс–Темы.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-path":"Кейс Геофилософия/2 Темы/0 Индекс–Темы","permalink":"/kejs-geofilosofiya/2-temy/0-indeks-temy/","pinned":true}
+{"dg-publish":true,"dg-path":"Кейс Геофилософия/2 Темы/0 Индекс–Темы","permalink":"/kejs-geofilosofiya/2-temy/0-indeks-temy/","hideInGraph":true,"pinned":true}
 ---
 
 
