Published multiple files

--- a/src/site/notes/Кейс Геофилософия/Индекс –база знаний по Геофилософии.md
+++ b/src/site/notes/Кейс Геофилософия/Индекс –база знаний по Геофилософии.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-path":"Кейс Геофилософия/Индекс –база знаний по Геофилософии","permalink":"/kejs-geofilosofiya/indeks-baza-znanij-po-geofilosofii/","pinned":true}
+{"dg-publish":true,"dg-path":"Кейс Геофилософия/Индекс –база знаний по Геофилософии","permalink":"/kejs-geofilosofiya/indeks-baza-znanij-po-geofilosofii/","hideInGraph":true,"pinned":true}
 ---
 
 
