--- a/src/site/notes/Кейс Геофилософия/Индекс –база знаний по Геофилософии.md
+++ b/src/site/notes/Кейс Геофилософия/Индекс –база знаний по Геофилософии.md
@@ -8,16 +8,26 @@
 Добро пожаловать в базу знаний по курсу "Введение в геофилософию"!
 Она создана на основании транскриптов  [одноименного курса лекций](https://youtube/sZ5y-9kIbDw?si=xqYSNwupECuOmw84) Максимилиана Неополитанского.
 
+В духе идей Жиля Делёза, эта база — не просто архив лекций, а **карта**. Это не калька, статично отражающая территорию, а динамическое пространство для исследования сложного и многогранного ландшафта геофилософской мысли.
+
+  Используйте **Граф** («паутинка» в правой верхней части или под заметкой если вы зашли с мобильного телефон), чтобы увидеть эту карту в действии. Он визуализирует ризоматические связи между идеями, авторами и понятиями, позволяя вам прокладывать собственные маршруты и совершать неожиданные открытия.
+ 
+
+
+
+🤖 База знаний подготовлена на базе Obsidian и плагина Digital Garden с помощью AI инструментов,
+Транскрибирование видео сделано с помощью ChatGPT o3 (возможны ошибки в написании некоторых слов). 
+С созданием структура и наполнением ее заметками лучше всех справилась модель Google Gemini 2.5 Pro. 
+
 Используйте эту страницу как отправную точку для навигации и исследования.
-База знаний 
 
 ## 🧭 Основные разделы
 
 - **[[Кейс Геофилософия/1 Лекции/0 Индекс –Лекции\|1 Лекции]]**: Полные конспекты всех 10 лекций курса.
 - **[[Кейс Геофилософия/2 Темы/0 Индекс–Темы\|2 Темы]]**: Обзор центральных тем, проходящих через весь курс.
 - **[[Кейс Геофилософия/3 Понятия/0 Индекс – Понятия\|3 Понятия]]**: Словарь ключевых терминов геофилософии.
-- **[[04 Авторы MOC\|04 Авторы MOC]]**: Заметки о философах и исследователях.
-- **[[05 Источники MOC\|05 Источники MOC]]**: Информация об основных текстах, на которые опирается курс.
+- **[[Кейс Геофилософия/4 Авторы/0 Индекс — Авторы\| 4 Авторы]]**: Заметки о философах и исследователях.
+- **[[Кейс Геофилософия/5 Источники/0 Индекс – Источники\|5 Источники]]**: Информация об основных текстах, на которые опирается курс.
 
 ---
 
