--- a/src/site/notes/Кейс Геофилософия/Индекс –база знаний по Геофилософии.md
+++ b/src/site/notes/Кейс Геофилософия/Индекс –база знаний по Геофилософии.md
@@ -8,16 +8,40 @@
 Добро пожаловать в базу знаний по курсу "Введение в геофилософию"!
 Она создана на основании транскриптов  [одноименного курса лекций](https://youtube/sZ5y-9kIbDw?si=xqYSNwupECuOmw84) Максимилиана Неополитанского.
 
+### Карта знаний 
 В духе идей Жиля Делёза, эта база — не просто архив лекций, а **карта**. Это не калька, статично отражающая территорию, а динамическое пространство для исследования сложного и многогранного ландшафта геофилософской мысли.
 
-  Используйте **Граф** («паутинка» в правой верхней части или под заметкой если вы зашли с мобильного телефон), чтобы увидеть эту карту в действии. Он визуализирует ризоматические связи между идеями, авторами и понятиями, позволяя вам прокладывать собственные маршруты и совершать неожиданные открытия.
+  Используйте **Граф** («паутинка» в правой верхней части или под заметкой – если вы зашли на сайт с мобильного телефон), чтобы увидеть эту карту в действии. Он визуализирует связи между идеями, авторами и понятиями, позволяя вам прокладывать собственные маршруты и совершать неожиданные открытия.
+  
+
+#### **Основные действия с графом**
+
+- **Навигация:** Вы можете свободно перемещать узлы (кружки с текстом), зажав их левой кнопкой мыши. Приближайте и отдаляйте карту с помощью колесика мыши, чтобы рассмотреть как общую картину, так и отдельные детали.
+    
+- **Исследование связей:** Нажмите на любой узел (например, на автора «Латур, Бруно» или понятие «Хтонь»), чтобы сфокусироваться на нем. Граф автоматически подсветит все страницы, напрямую связанные с выбранной темой. Это лучший способ проследить, как одна идея ведет к другой.
+    
+#### **Панель управления графа**
+
+В левой части графа находится панель для тонкой настройки вида:
+
+- **Глубина (Depth):** Этот ползунок позволяет контролировать, насколько далеко вы "смотрите" от центрального узла.
+    
+    - **Уровень 1** (как на изображении) покажет только прямые связи с выбранной заметкой.
+        
+    - **Уровень 2** покажет "связи связей", раскрывая более глубокие пересечения.
+        
+    - **Уровень 3** построит еще более разветвленную сеть.
+        
+- **Иконки (справа):**
+    
+    - **🌐 (Глобус):** Нажмите эту иконку, чтобы сбросить фокус и увидеть всю карту целиком.
+        
+    - **↖↗ (Стрелки):** Эта кнопка открывает граф в полноэкранном режиме для более удобного погружения.
  
 
 
 
-🤖 База знаний подготовлена на базе Obsidian и плагина Digital Garden с помощью AI инструментов,
-Транскрибирование видео сделано с помощью ChatGPT o3 (возможны ошибки в написании некоторых слов). 
-С созданием структура и наполнением ее заметками лучше всех справилась модель Google Gemini 2.5 Pro. 
+
 
 Используйте эту страницу как отправную точку для навигации и исследования.
 
@@ -61,9 +85,9 @@
 
 ---
 
-### Как пользоваться базой?
-- Кликайте на ссылки `[[в двойных скобках]]`, чтобы перемещаться между заметками.
-- Используйте **Граф** (иконка с тремя соединенными кружками на левой панели Obsidian), чтобы визуально исследовать связи между идеями и авторами.
+🤖 База знаний подготовлена на базе Obsidian и плагина Digital Garden с помощью AI инструментов,
+Транскрибирование видео сделано с помощью ChatGPT o3 (возможны ошибки в написании некоторых слов). 
+С созданием структура и наполнением ее заметками лучше всех справилась модель Google Gemini 2.5 Pro. 
 
 
 
