Published multiple files

--- a/src/site/notes/Кейс Геофилософия/Индекс –база знаний по Геофилософии.md
+++ b/src/site/notes/Кейс Геофилософия/Индекс –база знаний по Геофилософии.md
@@ -85,7 +85,7 @@
 
 ---
 
-🤖 База знаний подготовлена на базе Obsidian и плагина Digital Garden с помощью AI инструментов,
+🤖 База подготовлена на базе Obsidian и плагина Digital Garden с помощью AI инструментов.
 Транскрибирование видео сделано с помощью ChatGPT o3 (возможны ошибки в написании некоторых слов). 
 С созданием структура и наполнением ее заметками лучше всех справилась модель Google Gemini 2.5 Pro. 
 
