Published multiple files

--- a/src/site/notes/Кейс Геофилософия/1 Лекции/Лекция 02 - Земля как концепт.md
+++ b/src/site/notes/Кейс Геофилософия/1 Лекции/Лекция 02 - Земля как концепт.md
@@ -15,7 +15,7 @@
 - **Статья об островах**: [[География\|География]] напрямую связывается с воображаемым. Бессознательное бредит о континентах, а не об Эдипе.
 
 ### 2. "Анти-Эдип": Машины и территории
-- **[[Кейс Геофилософия/3 Понятия/Шизоанализ\|Шизоанализ]] vs. Психоанализ**: "Прогулка шизофреника" — это практика **[[Детерриторизация\|Детерриторизация]]**, создания новой земли с каждым шагом.
+- **[[Кейс Геофилософия/3 Понятия/Шизоанализ\|Шизоанализ]] vs. Психоанализ**: "Прогулка шизофреника" — это практика **[[Детерриторизация и Ретерриторизация\|Детерриторизации]]**, создания новой земли с каждым шагом.
 - **Машинная онтология**: Все есть машины желания. [[Кейс Геофилософия/3 Понятия/Земля\|Земля]] — это тоже производящая машина, "[[Кейс Геофилософия/3 Понятия/Тело без органов\|Тело без органов]]".
 - **[[Кейс Геофилософия/3 Понятия/Земля vs Территория\|Земля vs Территория]]**:
     - **[[Территория\|Территория]]**: Ограниченное, кодированное пространство (государство).
